correction on z-index on header

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,7 +8,7 @@
   height: 800px;
   display: flex;
   flex-direction: column;
-  z-index: -1;
+  z-index: 1;
 }
 
 .header__title {
@@ -43,6 +43,7 @@
   right: 5px;
   width: 646px;
   height: 568px;
+  z-index: -1;
 }
 
 .header__footer {
